# Desafio_Target_Sistemas

./: .gitignore  Makefile  Readme.md  pyproject.toml
.devcontainer/: Dockerfile  compose.yml  devcontainer.json
docs/: Desafio.md
src/: playground.py
src/assets/lang/: ui_labels.toml
src/config/: redis_conect.py
src/data/: dados.csv  faturamento_mensal.json
src/functions/: calcularSoma.py
src/page/: home.py  tarefa_1.py  tarefa_2.py  tarefa_3.py  tarefa_4.py  tarefa_5.py
src/utils/: load.py
src/utils/functions/: calcularSoma.py  faturamento.py  fibonacci.py  invert.py  percentual.py
